fix scrollbar

--- a/src/dotnet/UI.Blazor/Components/TabPanel/tab.css
+++ b/src/dotnet/UI.Blazor/Components/TabPanel/tab.css
@@ -34,6 +34,7 @@
 }
 .tab-panel .tab {
     @apply grow w-full max-w-full;
+    @apply overflow-y-auto custom-scrollbar;
 }
 
 .shape {
